# voxbridge

./: .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  docker-compose.yaml  fly.toml  pyproject.toml  render.yaml
examples/: TESTING_GUIDE.md  test_bridge.py  test_echo_bot.py
examples/ai_voice_bot/: README.md  bridge.py  bridge.yaml  requirements.txt  server.py  twiml_server.py  voice_bot.py
examples/config_driven/: bridge.yaml  my_bot.py
examples/programmatic/: custom_bridge.py
examples/sip_bridge/: sip_to_ws.py
platform/: docker-compose.yaml
platform/backend/: .env.example  requirements.txt  supabase_schema.sql
platform/backend/app/: config.py  main.py
platform/backend/migrations/: 000_full_schema.sql  002_agents_calls.sql  003_telephony_indexes.sql  004_knowledge_bases.sql  005_qa_scores.sql
platform/backend/tests/: test_agent_models.py  (+10 more)
tests/: test_barge_in.py  test_bridge.py  test_codecs.py  test_events.py  test_pipeline.py  test_serializers.py
voxbridge/: __init__.py  bridge.py  cli.py  config.py  platform.py  server.py  session.py
voxbridge/audio/: codecs.py  resampler.py
voxbridge/core/: events.py
voxbridge/pipeline/: __init__.py  context.py  escalation.py  orchestrator.py  turn_detector.py
voxbridge/providers/: __init__.py  base.py  registry.py
voxbridge/serializers/: amazon_connect.py  asterisk.py  avaya.py  base.py  cisco.py  freeswitch.py  generic_ws.py  genesys.py  registry.py  twilio.py
voxbridge/transports/: base.py  sip.py  websocket.py
website/: package-lock.json  package.json  tailwind.config.js
website/app/: globals.css  layout.tsx  page.tsx
(+90 files in other folders)
